--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -12,7 +12,7 @@
   }
   &-content {
     width: 100%;
-    height: 100vh;
+    min-height: calc(100vh - 6.5rem);
     &-container {
       width: $container-width;
       margin: 0 auto;
@@ -20,6 +20,7 @@
       display: flex;
       flex-direction: column;
       gap: 2rem;
+      min-height: calc(100vh - 6.5rem);
     }
   }
   &-back {
@@ -37,11 +38,6 @@
       width: 1rem;
       height: 1rem;
     }
-  }
-
-  &-content {
-    flex: 1;
-    min-height: 0;
   }
 }
 
